--- a/src/all_packages-nodeJS/packagesH.html
+++ b/src/all_packages-nodeJS/packagesH.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>all_packages-nodeJS</title>
 </head>
+
 <body>
     <div style="display: flex; justify-content: space-between;">
         <a href="../../index.html" class="GLASSlOLLIPOPS_a" style="margin: 30px;">exit</a>
-        <a href="https://github.com/andreyka101/Server---all_packages-nodeJS" class="GLASSlOLLIPOPS_a" style="margin: 30px;">открыть сервер</a>
+        <a href="https://github.com/andreyka101/Server---all_packages-nodeJS" class="GLASSlOLLIPOPS_a"
+            style="margin: 30px;">открыть сервер</a>
     </div>
     <div class="GLASSlOLLIPOPS_div" style="text-align: center;">
         пример работы с сервером
@@ -17,15 +20,31 @@
         <div style="text-align: center; margin-bottom: 20px;">
             простые запросы
         </div>
-        <span class="GLASSlOLLIPOPS_span">
-            <span class="marg">
-                открыть сервер
+        <div style="display: flex; justify-content: space-evenly;">
+            <span class="GLASSlOLLIPOPS_span">
+                <span class="marg">
+                    get запрос
+                </span>
+                <button class="GLASSlOLLIPOPS_button" id="br1">
+                    получить
+                </button>
             </span>
-            <button class="GLASSlOLLIPOPS_button" id="br">получить</button>
+            <span class="GLASSlOLLIPOPS_span">
+                <span class="marg">
+                    post запрос
+                </span>
+                <button class="GLASSlOLLIPOPS_button" id="br2">
+                    получить
+                </button>
+            </span>
+        </div>
+        <span class="GLASSlOLLIPOPS_span" style="display: block; text-align: center; padding: 12px; margin-top: 5px;">
+            ответ от сервера
         </span>
     </div>
 
 
     <script type="module" src="/src/all_packages-nodeJS/packagesT.ts"></script>
 </body>
+
 </html>
