--- a/src/all_packages-nodeJS/packagesH.html
+++ b/src/all_packages-nodeJS/packagesH.html
@@ -38,7 +38,7 @@
                 </button>
             </span>
         </div>
-        <span class="GLASSlOLLIPOPS_span" style="display: block; text-align: center; padding: 12px; margin-top: 5px;">
+        <span class="GLASSlOLLIPOPS_span" style="text-align: center; padding: 12px;margin: 0 auto; margin-top: 5px;">
             ответ от сервера
         </span>
     </div>
