--- a/src/all_packages-nodeJS/packagesH.html
+++ b/src/all_packages-nodeJS/packagesH.html
@@ -20,8 +20,8 @@
         <div style="text-align: center; margin-bottom: 20px;">
             простые запросы
         </div>
-        <div style="display: flex; justify-content: space-evenly;">
-            <span class="GLASSlOLLIPOPS_span">
+        <div style="display: grid; grid-template-columns: 1fr 1fr; grid-template-rows: 1fr 1fr; row-gap: 20px; column-gap: 20px;">
+            <span class="GLASSlOLLIPOPS_span" style="display: flex; align-items: center; justify-content: center;">
                 <span class="marg">
                     get запрос
                 </span>
@@ -29,7 +29,7 @@
                     получить
                 </button>
             </span>
-            <span class="GLASSlOLLIPOPS_span">
+            <span class="GLASSlOLLIPOPS_span" style="display: flex; align-items: center; justify-content: center;">
                 <span class="marg">
                     post запрос
                 </span>
@@ -37,10 +37,10 @@
                     получить
                 </button>
             </span>
+            <span class="GLASSlOLLIPOPS_span" style="text-align: center; grid-column: 1 / 3; display: flex; align-items: center; justify-content: center;">
+                ответ от сервера
+            </span>
         </div>
-        <span class="GLASSlOLLIPOPS_span" style="text-align: center; padding: 12px;margin: 0 auto; margin-top: 5px;">
-            ответ от сервера
-        </span>
     </div>
 
 
