--- a/src/all_packages-nodeJS/packagesH.html
+++ b/src/all_packages-nodeJS/packagesH.html
@@ -37,8 +37,8 @@
                     получить
                 </button>
             </span>
-            <span class="GLASSlOLLIPOPS_span" style="text-align: center; grid-column: 1 / 3; display: flex; align-items: center; justify-content: center;">
-                ответ от сервера
+            <span id="sp1" class="GLASSlOLLIPOPS_span" style="text-align: center; grid-column: 1 / 3; display: flex; align-items: center; justify-content: center;">
+                ответ от сервера: 
             </span>
         </div>
     </div>
