--- a/src/all_packages-nodeJS/packagesH.html
+++ b/src/all_packages-nodeJS/packagesH.html
@@ -42,6 +42,12 @@
             </span>
         </div>
     </div>
+    <div class="GLASSlOLLIPOPS_div">
+        <div style="text-align: center; margin-bottom: 20px;">
+            запрос картинки
+        </div>
+        <div id="sp2"></div>
+    </div>
 
 
     <script type="module" src="/src/all_packages-nodeJS/packagesT.ts"></script>
