--- a/src/all_packages-nodeJS/packagesH.html
+++ b/src/all_packages-nodeJS/packagesH.html
@@ -16,6 +16,7 @@
     <div class="GLASSlOLLIPOPS_div" style="text-align: center;">
         пример работы с сервером
     </div>
+    <!-- FIXME - простые запросы -->
     <div class="GLASSlOLLIPOPS_div">
         <div style="text-align: center; margin-bottom: 20px;">
             простые запросы
@@ -42,6 +43,7 @@
             </span>
         </div>
     </div>
+    <!-- FIXME - статические файлы -->
     <div class="GLASSlOLLIPOPS_div">
         <div style="text-align: center; margin-bottom: 20px;">
             статические файлы
