--- a/src/passing_json/passing_json_INDEX.html
+++ b/src/passing_json/passing_json_INDEX.html
@@ -10,7 +10,30 @@
         <a href="../../index.html" class="GLASSlOLLIPOPS_a" style="margin: 30px;">exit</a>
     </div>
     <div class="GLASSlOLLIPOPS_div">
-
+        <p>
+            пример с видео
+        </p>
+        <div class="divSpan">
+            <div style="display: flex;flex-wrap: wrap;justify-content: center;">
+                <span class="GLASSlOLLIPOPS_span" style="text-align: center;">
+                    получить json
+                    <button class="GLASSlOLLIPOPS_button b1">получить</button>
+                </span>
+                <span class="GLASSlOLLIPOPS_span" style="text-align: center;">
+                    отправить json
+                    <button class="GLASSlOLLIPOPS_button b2">отправить</button>
+                </span>
+            </div>
+            <span class="GLASSlOLLIPOPS_span">
+                <div style="text-align: center; margin: 10px;">
+                    создать объект
+                </div>
+                <input class="GLASSlOLLIPOPS_input inp1" style="margin: 10px;" type="text">
+                =
+                <input class="GLASSlOLLIPOPS_input inp2" style="margin: 10px;" type="text">
+            </span>
+            <div id="conclusionJSON"></div>
+        </div>
     </div>
     
 </body>
