--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
           </a>
         </span>
 
+        <span class="GLASSlOLLIPOPS_span" id="block4">
+          <span class="GLASSlOLLIPOPS_span">
+            база данных
+          </span>
+          <a href="./src/example_database/e_database_i.html" class="GLASSlOLLIPOPS_a">
+            открыть
+          </a>
+        </span>
+
       </div>
       
       <!-- LINK - старые задания -->
