--- a/src/example_database/e_database_i.html
+++ b/src/example_database/e_database_i.html
@@ -10,7 +10,7 @@
         <a href="../../index.html" class="GLASSlOLLIPOPS_a" style="margin: 30px;">exit</a>
     </div>
     <div class="GLASSlOLLIPOPS_div" style="text-align: center;">
-        передача json пример
+        пример работы с базой данных
     </div>
     <div class="GLASSlOLLIPOPS_div">
         <div class="divSpan">
@@ -38,7 +38,7 @@
     <div class="GLASSlOLLIPOPS_div" style="text-align: center;">
         lesson-1_nodeJS
     </div>
-    
 </body>
-<script type="module" src="/src/passing_json/passing_json_MAIN.ts"></script>
+
+<script type="module" src="/src/example_database/e_database_m.ts"></script>
 </html>
