--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
             открыть
           </a>
         </span>
+        <span class="GLASSlOLLIPOPS_span" id="block2">
+          <span class="GLASSlOLLIPOPS_span">
+            Овощи и фрукты
+          </span>
+          <a href="./src/vegetables_and_fruits/v-a-fruits.html" class="GLASSlOLLIPOPS_a">
+            открыть
+          </a>
+        </span>
 
       </div>
       
