--- a/src/vegetables_and_fruits/v-a-fruits.html
+++ b/src/vegetables_and_fruits/v-a-fruits.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <div style="display: flex; justify-content: space-between; align-items: center;">
-        <a href="../../index.html" class="GLASSlOLLIPOPS_a" style="margin: 30px;">exit</a>
+        <div>
+            <a href="../../index.html" class="GLASSlOLLIPOPS_a" style="margin: 30px;">exit</a>
+            <button class="GLASSlOLLIPOPS_a" style="margin: 30px; margin-left: 0;">смотреть задание</button>
+        </div>
         <div class="ring">
             <div class="point"></div>
         </div>
