--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
           </a>
         </span>
 
+        <span class="GLASSlOLLIPOPS_span" id="block4">
+          <span class="GLASSlOLLIPOPS_span">
+            отправка формы
+          </span>
+          <a href="./src/" class="GLASSlOLLIPOPS_a">
+            открыть
+          </a>
+        </span>
+
       </div>
       
       <!-- LINK - старые задания -->
