--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </span>
       </div> -->
       
-      <!-- LINK - старые задания -->
+      <!-- LINK - дз с запросами -->
       <div class="GLASSlOLLIPOPS_div">
         <div style="padding-left: 30px; margin-bottom: 20px;">
           дз с запросами
