--- a/src/passing_json/passing_json_INDEX.html
+++ b/src/passing_json/passing_json_INDEX.html
@@ -10,9 +10,39 @@
         <a href="../../index.html" class="GLASSlOLLIPOPS_a" style="margin: 30px;">exit</a>
     </div>
     <div class="GLASSlOLLIPOPS_div" style="text-align: center;">
-        передача json пример
+        передача json
     </div>
-    <div class="GLASSlOLLIPOPS_div">
+    <div class="GLASSlOLLIPOPS_div" style="display: flex;flex-direction: column;align-items: center;">
+        <span class="GLASSlOLLIPOPS_span" id="conclusionJSON">
+            здесь будет ответ
+        </span>
+        <button class="GLASSlOLLIPOPS_button b1">
+            получить json
+        </button>
+    </div>
+    <div class="GLASSlOLLIPOPS_div" style="display: flex;flex-direction: column;align-items: center;">
+        <span class="GLASSlOLLIPOPS_span">
+            <div style="text-align: center; margin: 10px;">
+                напишите <span id="key">ключ</span> и <span id="value">значение</span>
+            </div>
+            <input class="GLASSlOLLIPOPS_input inp1" style="margin: 10px;" type="text">
+            =
+            <input class="GLASSlOLLIPOPS_input inp2" style="margin: 10px;" type="text">
+        </span>
+        <button class="GLASSlOLLIPOPS_button b2">
+            отправить объект
+        </button>
+    </div>
+
+
+
+
+
+
+
+
+
+    <!-- <div class="GLASSlOLLIPOPS_div">
         <div class="divSpan">
             <div style="display: flex;flex-wrap: wrap;justify-content: center;">
                 <span class="GLASSlOLLIPOPS_span" style="text-align: center;">
@@ -34,10 +64,7 @@
             </span>
             <div id="conclusionJSON"></div>
         </div>
-    </div>
-    <div class="GLASSlOLLIPOPS_div" style="text-align: center;">
-        lesson-1_nodeJS
-    </div>
+    </div> -->
     
 </body>
 <script type="module" src="/src/passing_json/passing_json_MAIN.ts"></script>
