--- a/src/movie_search/movie.html
+++ b/src/movie_search/movie.html
@@ -80,52 +80,13 @@
 
 
     <div id="add" style="display: flex; flex-wrap: wrap; justify-content: center; max-width: 1350px; margin: 0 auto;">
-         <div class="GLASSlOLLIPOPS_div movieBlockFlex" style="width: 818px; display: none;">
-            <div class="movieBlock">
-
-                <img src="https://m.media-amazon.com/images/M/MV5BNzNlZTZjMDctZjYwNi00NzljLWIwN2QtZWZmYmJiYzQ0MTk2XkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_SX300.jpg"
-                    alt="" style="height: 280px;">
-                <div>
-                    <span>
-                        название фильма
-                    </span>
-                    <span>
-                        1999
-                    </span>
-                    <span class="longText">
-                        Note: animation-range-start is included in the animation shorthand as a reset-only value. This
-                        means that including animation resets a previously-declared animation-range-start Note:
-                        animation-range-start is included in the animation shorthand as a reset-only value. This means
-                        that including animation resets a previously-declared animation-range-start value to normal, but
-                        a specific value cannot be set via animation. When creating CSS scroll-driven animations, you
-                        need to declare animation-range-start after declaring any animation shorthand for it to take
-                        effect.Note: animation-range-start is included in the animation shorthand as a reset-only value.
-                        This means that including animation resets a previously-declared animation-range-start value to
-                        normal, but a specific value cannot be set via animation. When creating CSS scroll-driven
-                        animations, you need to declare animation-range-start after declaring any animation shorthand
-                        for it to take effect.
-                    </span>
-                    <span class="shortText" style="display: none;">
-                        Note: animation-range-start is included in the animation shorthand as a reset-only value. This
-                        means that including animation resets a previously-declared animation-range-start ...
-                    </span>
-                </div>
-            </div>
-            <div class="A2buttonBlock" style="">
-                <a href="" class="GLASSlOLLIPOPS_a">поиск на РУС.</a>
-                <button class="GLASSlOLLIPOPS_button collapse">свернуть</button>
-                <a href="" class="GLASSlOLLIPOPS_a">поиск на ENG.</a>
-            </div>
-            <div class="buttonBlock" style="display: none;">
-                <button class="GLASSlOLLIPOPS_button expand">развернуть</button>
-            </div>
-        </div>
 
 
-        <div  style="display: flex; justify-content: center; flex-wrap: wrap;">
 
-            <div class="GLASSlOLLIPOPS_div movieBlockFlex" id="m1" style="">
-                <div class="movieBlock">
+        <div class="twoFilms" style="display: flex; justify-content: center; flex-wrap: wrap;">
+
+            <div class="GLASSlOLLIPOPS_div mainBlockFilm" id="m1" style="">
+                <div class="film_imgSpan">
                     <img src="https://m.media-amazon.com/images/M/MV5BNzNlZTZjMDctZjYwNi00NzljLWIwN2QtZWZmYmJiYzQ0MTk2XkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_SX300.jpg"
                         alt="">
                     <div>
@@ -154,7 +115,7 @@
                         </span>
                     </div>
                 </div>
-                <div class="A2buttonBlock" style="display: none;">
+                <div class="A2ButtonBlock" style="display: none;">
                     <a href="" class="GLASSlOLLIPOPS_a">поиск на РУС.</a>
                     <button class="GLASSlOLLIPOPS_button collapse">свернуть</button>
                     <a href="" class="GLASSlOLLIPOPS_a">поиск на ENG.</a>
@@ -163,8 +124,8 @@
                     <button class="GLASSlOLLIPOPS_button expand">развернуть</button>
                 </div>
             </div>
-            <div class="GLASSlOLLIPOPS_div movieBlockFlex" id="m2" style="">
-                <div class="movieBlock">
+            <div class="GLASSlOLLIPOPS_div mainBlockFilm" id="m2" style="">
+                <div class="film_imgSpan">
                     <img src="https://m.media-amazon.com/images/M/MV5BNzNlZTZjMDctZjYwNi00NzljLWIwN2QtZWZmYmJiYzQ0MTk2XkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_SX300.jpg"
                         alt="">
                     <div>
@@ -193,7 +154,7 @@
                         </span>
                     </div>
                 </div>
-                <div class="A2buttonBlock" style="display: none;">
+                <div class="A2ButtonBlock" style="display: none;">
                     <a href="" class="GLASSlOLLIPOPS_a">поиск на РУС.</a>
                     <button class="GLASSlOLLIPOPS_button collapse">свернуть</button>
                     <a href="" class="GLASSlOLLIPOPS_a">поиск на ENG.</a>
@@ -205,8 +166,8 @@
         </div>
         <div style="display: flex; justify-content: center; flex-wrap: wrap;">
 
-            <div class="GLASSlOLLIPOPS_div movieBlockFlex" id="m3" style="width: 818px;">
-                <div class="movieBlock">
+            <div class="GLASSlOLLIPOPS_div mainBlockFilm" id="m3" style="width: 818px;">
+                <div class="film_imgSpan">
                     <img src="https://m.media-amazon.com/images/M/MV5BNzNlZTZjMDctZjYwNi00NzljLWIwN2QtZWZmYmJiYzQ0MTk2XkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_SX300.jpg"
                         alt="">
                     <div>
@@ -235,7 +196,7 @@
                         </span>
                     </div>
                 </div>
-                <div class="A2buttonBlock">
+                <div class="A2ButtonBlock">
                     <a href="" class="GLASSlOLLIPOPS_a">поиск на РУС.</a>
                     <button class="GLASSlOLLIPOPS_button collapse">свернуть</button>
                     <a href="" class="GLASSlOLLIPOPS_a">поиск на ENG.</a>
@@ -244,8 +205,8 @@
                     <button class="GLASSlOLLIPOPS_button expand">развернуть</button>
                 </div>
             </div>
-            <!-- <div class="GLASSlOLLIPOPS_div movieBlockFlex" id="m4" style="">
-                <div class="movieBlock">
+            <!-- <div class="GLASSlOLLIPOPS_div mainBlockFilm" id="m4" style="">
+                <div class="film_imgSpan">
                     <img src="https://m.media-amazon.com/images/M/MV5BNzNlZTZjMDctZjYwNi00NzljLWIwN2QtZWZmYmJiYzQ0MTk2XkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_SX300.jpg"
                         alt="">
                     <div>
@@ -274,7 +235,7 @@
                         </span>
                     </div>
                 </div>
-                <div class="A2buttonBlock" style="display: none;">
+                <div class="A2ButtonBlock" style="display: none;">
                     <a href="" class="GLASSlOLLIPOPS_a">поиск на РУС.</a>
                     <button class="GLASSlOLLIPOPS_button collapse">свернуть</button>
                     <a href="" class="GLASSlOLLIPOPS_a">поиск на ENG.</a>
