--- a/src/movie_search/movie.html
+++ b/src/movie_search/movie.html
@@ -25,7 +25,7 @@
             <label for="checkbox"></label>
         </div> -->
     </div>
-    <div style="display: flex;">
+    <div id="" style="display: flex;">
         <div class="GLASSlOLLIPOPS_div" id="search" style="display: flex;flex-direction: column;align-items: center;">
             поиск фильмов
             <input id="inp" type="text" placeholder="название фильма " class="GLASSlOLLIPOPS_input"
@@ -83,7 +83,7 @@
 
 
 
-        <div class="twoFilms" style="display: flex; justify-content: center; flex-wrap: wrap;">
+        <!-- <div class="twoFilms" style="display: flex; justify-content: center; flex-wrap: wrap;">
 
             <div class="GLASSlOLLIPOPS_div mainBlockFilm" data-id="0">
                 <div class="film_imgSpan">
@@ -247,7 +247,7 @@
                     <button class="GLASSlOLLIPOPS_button expand">развернуть</button>
                 </div>
             </div>
-        </div>
+        </div> -->
         
 
         
