--- a/src/movie_search/movie.html
+++ b/src/movie_search/movie.html
@@ -253,6 +253,7 @@
         
                  
     </div>
+    <!-- <div id="gig">gig</div> -->
     <script type="module" src="/src/movie_search/movieTS.ts"></script>
 </body>
 
